# bspcq

./: .gitignore  LICENSE  Pipfile  README.md  bspcq  setup.cfg
contrib/: xtitle
docs/: conf.py  index.md
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
src/bspcq/: __init__.py  __main__.py  bspcq.py
src/bspcq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
