[metadata]
name = bspcq
version = 0.1.4
author = Aiden Langley
author_email = aiden@nedia.dev
description = A `bspc` analyzer & a utility for bspwm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aidenlangley/bspcq
project_urls =
    Bug Tracker = https://github.com/aidenlangley/bspcq/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Environment :: Console
    Environment :: X11 Applications
    Intended Audience :: End Users/Desktop
    Operating System :: POSIX :: Linux
    Topic :: Desktop Environment :: Window Managers
keywords = bspwm

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bspcq = bspcq:bspcq [rich]
