[metadata]
author = Aiden Langley
author_email = aiden@nedia.dev
description = A `bspc` analyzer & a utility for bspwm
classifiers =
    Environment :: Console
    Environment :: X11 Applications
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Desktop Environment :: Window Managers
keywords = bspwm
long_description = file: README.md
long_description_content_type = text/markdown
name = bspcq
project_urls =
    Bug Tracker = https://github.com/aidenlangley/bspcq/issues
url = https://github.com/aidenlangley/bspcq
version = 0.1.58

[options]
install_requires =
    rich
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bspcq = bspcq:bspcq [rich]
